examples/go-envoy-ext-authz/envoy.yaml
static_resources:
  listeners:
    - name: protected_http
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: access_kit_gateway
                route_config:
                  name: protected_routes
                  virtual_hosts:
                    - name: protected_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/protected"
                          route:
                            cluster: protected_app
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      http_service:
                        server_uri:
                          uri: http://access-kit-go-ext-authz
                          cluster: access_kit_go_ext_authz
                          timeout: 0.250s
                        path_prefix: /authorize
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: x-access-kit-action
                              - exact: x-access-kit-resource
                              - exact: x-access-kit-subject
                              - exact: x-correlation-id
                              - exact: x-subject-id
                              - exact: x-envoy-original-path
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: x-correlation-id
                              - exact: x-access-kit-decision-id
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: access_kit_go_ext_authz
      type: STRICT_DNS
      connect_timeout: 0.250s
      load_assignment:
        cluster_name: access_kit_go_ext_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9000
    - name: protected_app
      type: STRICT_DNS
      connect_timeout: 0.250s
      load_assignment:
        cluster_name: protected_app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
